fixed output formatting bug where white space was not being shown

--- a/templates/events/show.html.hbs
+++ b/templates/events/show.html.hbs
@@ -19,8 +19,8 @@
         <br/>
         <b>OUTPUT: </b>
         <br/>
-        <code style=" background-color: #e3e3e3">
-        {{event.output}}
+        <code style="background-color: #e3e3e3;">
+        <pre>{{ event.output }}</pre>
         </code>
       </p>
     </div>
